tests/baselines/reference/stringLiteralsWithTypeAssertions01.errors.txt
tests/cases/conformance/types/stringLiteral/stringLiteralsWithTypeAssertions01.ts(3,9): error TS2352: Type '"foo"' cannot be converted to type '"bar"'.
tests/cases/conformance/types/stringLiteral/stringLiteralsWithTypeAssertions01.ts(4,9): error TS2352: Type '"bar"' cannot be converted to type '"foo"'.
tests/cases/conformance/types/stringLiteral/stringLiteralsWithTypeAssertions01.ts(7,9): error TS2352: Type '"foo" | "bar"' cannot be converted to type '"baz"'.
  Type '"bar"' is not comparable to type '"baz"'.
tests/cases/conformance/types/stringLiteral/stringLiteralsWithTypeAssertions01.ts(8,9): error TS2352: Type '"baz"' cannot be converted to type '"foo" | "bar"'.


==== tests/cases/conformance/types/stringLiteral/stringLiteralsWithTypeAssertions01.ts (4 errors) ====
    let fooOrBar: "foo" | "bar";
    
    let a = "foo" as "bar";
            ~~~~~~~~~~~~~~
!!! error TS2352: Type '"foo"' cannot be converted to type '"bar"'.
    let b = "bar" as "foo";
            ~~~~~~~~~~~~~~
!!! error TS2352: Type '"bar"' cannot be converted to type '"foo"'.
    let c = fooOrBar as "foo";
    let d = fooOrBar as "bar";
    let e = fooOrBar as "baz";
            ~~~~~~~~~~~~~~~~~
!!! error TS2352: Type '"foo" | "bar"' cannot be converted to type '"baz"'.
!!! error TS2352:   Type '"bar"' is not comparable to type '"baz"'.
    let f = "baz" as typeof fooOrBar;
            ~~~~~~~~~~~~~~~~~~~~~~~~
!!! error TS2352: Type '"baz"' cannot be converted to type '"foo" | "bar"'.